Select editor working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,5 @@
 		"titleBar.inactiveForeground": "#15202b99"
 	},
 	"peacock.color": "#f9e64f",
-	"cSpell.words": ["craigsh", "ngcc", "nrwl", "plugins", "polyfills", "tabindex", "vars"]
+	"cSpell.words": ["craigsh", "ngcc", "nrwl", "plugins", "polyfills", "sass", "tabindex", "vars"]
 }
