Final tweaks to simplfy

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,18 @@
 		"titleBar.inactiveForeground": "#15202b99"
 	},
 	"peacock.color": "#f9e64f",
-	"cSpell.words": ["craigsh", "ngcc", "nrwl", "plugins", "polyfills", "sass", "tabindex", "vars"]
+	"cSpell.words": [
+		"Boxter",
+		"Celica",
+		"craigsh",
+		"labelledby",
+		"ngcc",
+		"nrwl",
+		"plugins",
+		"polyfills",
+		"sass",
+		"tabindex",
+		"vars",
+		"Venga"
+	]
 }
